Fix layout shifting on scrollbar

--- a/app/assets/scss/main.scss
+++ b/app/assets/scss/main.scss
@@ -10,6 +10,12 @@
   }
 }
 
+html {
+  // Prevent layout shift when scrollbar is hidden/shown
+  overflow-x: hidden;
+  margin-right: calc(-1 * (100vw - 100%));
+}
+
 html,
 body {
   min-height: 100vh;
